ivy/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARROW
    DOT
    EQ
    TILDA
    TILDAEQ

Grammar

Rule 0     S' -> top
Rule 1     top -> <empty>
Rule 2     top -> top field
Rule 3     field -> VAR vardecl SEMI
Rule 4     vardecl -> SYMBOL COLON type
Rule 5     symbol -> SYMBOL
Rule 6     type -> SYMBOL
Rule 7     args -> LPAREN RPAREN
Rule 8     args -> LPAREN vardecls RPAREN
Rule 9     vardecls -> vardecl
Rule 10    vardecls -> vardecls COMMA vardecl
Rule 11    opt_semi -> <empty>
Rule 12    opt_semi -> SEMI
Rule 13    requires -> <empty>
Rule 14    requires -> REQUIRES expr opt_semi
Rule 15    modifies -> <empty>
Rule 16    modifies -> MODIFIES modsets opt_semi
Rule 17    ensures -> <empty>
Rule 18    ensures -> ENSURES expr opt_semi
Rule 19    returns -> <empty>
Rule 20    returns -> RETURNS args
Rule 21    decreases -> <empty>
Rule 22    decreases -> DECREASES expr opt_semi
Rule 23    field -> METHOD symbol args returns requires modifies ensures decreases LCB stmts RCB
Rule 24    modsets -> <empty>
Rule 25    modsets -> modset
Rule 26    modsets -> modsets COMMA modset
Rule 27    modset -> symbol
Rule 28    modset -> LCB RCB
Rule 29    modset -> LCB symbols RCB
Rule 30    symbols -> symbol
Rule 31    symbols -> symbols COMMA symbol
Rule 32    expr -> LPAREN expr RPAREN
Rule 33    expr -> symbol
Rule 34    expr -> symbol LPAREN RPAREN
Rule 35    expr -> symbol LPAREN exprs RPAREN
Rule 36    expr -> expr AND expr
Rule 37    expr -> expr OR expr
Rule 38    expr -> expr IMPLIES expr
Rule 39    expr -> expr IFF expr
Rule 40    expr -> BANG expr
Rule 41    expr -> expr EQEQ expr
Rule 42    expr -> expr BANGEQ expr
Rule 43    expr -> expr PLUS expr
Rule 44    expr -> expr MINUS expr
Rule 45    expr -> MINUS expr
Rule 46    expr -> expr TIMES expr
Rule 47    expr -> expr LE expr
Rule 48    expr -> expr LT expr
Rule 49    expr -> expr GE expr
Rule 50    expr -> expr GT expr
Rule 51    lvalue -> symbol
Rule 52    stmt -> lvalues ASSIGN exprs SEMI
Rule 53    lvalues -> lvalue
Rule 54    lvalues -> lvalues COMMA lvalue
Rule 55    exprs -> expr
Rule 56    exprs -> exprs COMMA expr
Rule 57    stmt -> ASSUME expr SEMI
Rule 58    stmt -> ASSERT expr SEMI
Rule 59    stmts -> stmt
Rule 60    stmts -> stmts stmt
Rule 61    invariant -> INVARIANT expr
Rule 62    invariants -> <empty>
Rule 63    invariants -> invariants invariant
Rule 64    stmt -> WHILE expr modifies invariants LCB stmts RCB
Rule 65    stmt -> IF expr LCB stmts RCB
Rule 66    stmt -> IF expr LCB stmts RCB ELSE LCB stmts RCB
Rule 67    stmt -> VAR vardecl SEMI
Rule 68    stmt -> VAR symbols ASSIGN exprs SEMI
Rule 69    stmt -> RETURN SEMI
Rule 70    stmt -> RETURN exprs SEMI

Terminals, with rules where they appear

AND                  : 36
ARROW                : 
ASSERT               : 58
ASSIGN               : 52 68
ASSUME               : 57
BANG                 : 40
BANGEQ               : 42
COLON                : 4
COMMA                : 10 26 31 54 56
DECREASES            : 22
DOT                  : 
ELSE                 : 66
ENSURES              : 18
EQ                   : 
EQEQ                 : 41
GE                   : 49
GT                   : 50
IF                   : 65 66
IFF                  : 39
IMPLIES              : 38
INVARIANT            : 61
LCB                  : 23 28 29 64 65 66 66
LE                   : 47
LPAREN               : 7 8 32 34 35
LT                   : 48
METHOD               : 23
MINUS                : 44 45
MODIFIES             : 16
OR                   : 37
PLUS                 : 43
RCB                  : 23 28 29 64 65 66 66
REQUIRES             : 14
RETURN               : 69 70
RETURNS              : 20
RPAREN               : 7 8 32 34 35
SEMI                 : 3 12 52 57 58 67 68 69 70
SYMBOL               : 4 5 6
TILDA                : 
TILDAEQ              : 
TIMES                : 46
VAR                  : 3 67 68
WHILE                : 64
error                : 

Nonterminals, with rules where they appear

args                 : 20 23
decreases            : 23
ensures              : 23
expr                 : 14 18 22 32 36 36 37 37 38 38 39 39 40 41 41 42 42 43 43 44 44 45 46 46 47 47 48 48 49 49 50 50 55 56 57 58 61 64 65 66
exprs                : 35 52 56 68 70
field                : 2
invariant            : 63
invariants           : 63 64
lvalue               : 53 54
lvalues              : 52 54
modifies             : 23 64
modset               : 25 26
modsets              : 16 26
opt_semi             : 14 16 18 22
requires             : 23
returns              : 23
stmt                 : 59 60
stmts                : 23 60 64 65 66 66
symbol               : 23 27 30 31 33 34 35 51
symbols              : 29 31 68
top                  : 2 0
type                 : 4
vardecl              : 3 9 10 67
vardecls             : 8 10

Parsing method: LALR

state 0

    (0) S' -> . top
    (1) top -> .
    (2) top -> . top field

    VAR             reduce using rule 1 (top -> .)
    METHOD          reduce using rule 1 (top -> .)
    $end            reduce using rule 1 (top -> .)

    top                            shift and go to state 1

state 1

    (0) S' -> top .
    (2) top -> top . field
    (3) field -> . VAR vardecl SEMI
    (23) field -> . METHOD symbol args returns requires modifies ensures decreases LCB stmts RCB

    VAR             shift and go to state 3
    METHOD          shift and go to state 4

    field                          shift and go to state 2

state 2

    (2) top -> top field .

    VAR             reduce using rule 2 (top -> top field .)
    METHOD          reduce using rule 2 (top -> top field .)
    $end            reduce using rule 2 (top -> top field .)


state 3

    (3) field -> VAR . vardecl SEMI
    (4) vardecl -> . SYMBOL COLON type

    SYMBOL          shift and go to state 6

    vardecl                        shift and go to state 5

state 4

    (23) field -> METHOD . symbol args returns requires modifies ensures decreases LCB stmts RCB
    (5) symbol -> . SYMBOL

    SYMBOL          shift and go to state 8

    symbol                         shift and go to state 7

state 5

    (3) field -> VAR vardecl . SEMI

    SEMI            shift and go to state 9


state 6

    (4) vardecl -> SYMBOL . COLON type

    COLON           shift and go to state 10


state 7

    (23) field -> METHOD symbol . args returns requires modifies ensures decreases LCB stmts RCB
    (7) args -> . LPAREN RPAREN
    (8) args -> . LPAREN vardecls RPAREN

    LPAREN          shift and go to state 12

    args                           shift and go to state 11

state 8

    (5) symbol -> SYMBOL .

    LPAREN          reduce using rule 5 (symbol -> SYMBOL .)
    AND             reduce using rule 5 (symbol -> SYMBOL .)
    OR              reduce using rule 5 (symbol -> SYMBOL .)
    IMPLIES         reduce using rule 5 (symbol -> SYMBOL .)
    IFF             reduce using rule 5 (symbol -> SYMBOL .)
    EQEQ            reduce using rule 5 (symbol -> SYMBOL .)
    BANGEQ          reduce using rule 5 (symbol -> SYMBOL .)
    PLUS            reduce using rule 5 (symbol -> SYMBOL .)
    MINUS           reduce using rule 5 (symbol -> SYMBOL .)
    TIMES           reduce using rule 5 (symbol -> SYMBOL .)
    LE              reduce using rule 5 (symbol -> SYMBOL .)
    LT              reduce using rule 5 (symbol -> SYMBOL .)
    GE              reduce using rule 5 (symbol -> SYMBOL .)
    GT              reduce using rule 5 (symbol -> SYMBOL .)
    SEMI            reduce using rule 5 (symbol -> SYMBOL .)
    MODIFIES        reduce using rule 5 (symbol -> SYMBOL .)
    ENSURES         reduce using rule 5 (symbol -> SYMBOL .)
    DECREASES       reduce using rule 5 (symbol -> SYMBOL .)
    LCB             reduce using rule 5 (symbol -> SYMBOL .)
    COMMA           reduce using rule 5 (symbol -> SYMBOL .)
    INVARIANT       reduce using rule 5 (symbol -> SYMBOL .)
    RPAREN          reduce using rule 5 (symbol -> SYMBOL .)
    RCB             reduce using rule 5 (symbol -> SYMBOL .)
    ASSIGN          reduce using rule 5 (symbol -> SYMBOL .)


state 9

    (3) field -> VAR vardecl SEMI .

    VAR             reduce using rule 3 (field -> VAR vardecl SEMI .)
    METHOD          reduce using rule 3 (field -> VAR vardecl SEMI .)
    $end            reduce using rule 3 (field -> VAR vardecl SEMI .)


state 10

    (4) vardecl -> SYMBOL COLON . type
    (6) type -> . SYMBOL

    SYMBOL          shift and go to state 13

    type                           shift and go to state 14

state 11

    (23) field -> METHOD symbol args . returns requires modifies ensures decreases LCB stmts RCB
    (19) returns -> .
    (20) returns -> . RETURNS args

    REQUIRES        reduce using rule 19 (returns -> .)
    MODIFIES        reduce using rule 19 (returns -> .)
    ENSURES         reduce using rule 19 (returns -> .)
    DECREASES       reduce using rule 19 (returns -> .)
    LCB             reduce using rule 19 (returns -> .)
    RETURNS         shift and go to state 16

    returns                        shift and go to state 15

state 12

    (7) args -> LPAREN . RPAREN
    (8) args -> LPAREN . vardecls RPAREN
    (9) vardecls -> . vardecl
    (10) vardecls -> . vardecls COMMA vardecl
    (4) vardecl -> . SYMBOL COLON type

    RPAREN          shift and go to state 17
    SYMBOL          shift and go to state 6

    vardecls                       shift and go to state 18
    vardecl                        shift and go to state 19

state 13

    (6) type -> SYMBOL .

    SEMI            reduce using rule 6 (type -> SYMBOL .)
    RPAREN          reduce using rule 6 (type -> SYMBOL .)
    COMMA           reduce using rule 6 (type -> SYMBOL .)


state 14

    (4) vardecl -> SYMBOL COLON type .

    SEMI            reduce using rule 4 (vardecl -> SYMBOL COLON type .)
    RPAREN          reduce using rule 4 (vardecl -> SYMBOL COLON type .)
    COMMA           reduce using rule 4 (vardecl -> SYMBOL COLON type .)


state 15

    (23) field -> METHOD symbol args returns . requires modifies ensures decreases LCB stmts RCB
    (13) requires -> .
    (14) requires -> . REQUIRES expr opt_semi

    MODIFIES        reduce using rule 13 (requires -> .)
    ENSURES         reduce using rule 13 (requires -> .)
    DECREASES       reduce using rule 13 (requires -> .)
    LCB             reduce using rule 13 (requires -> .)
    REQUIRES        shift and go to state 21

    requires                       shift and go to state 20

state 16

    (20) returns -> RETURNS . args
    (7) args -> . LPAREN RPAREN
    (8) args -> . LPAREN vardecls RPAREN

    LPAREN          shift and go to state 12

    args                           shift and go to state 22

state 17

    (7) args -> LPAREN RPAREN .

    RETURNS         reduce using rule 7 (args -> LPAREN RPAREN .)
    REQUIRES        reduce using rule 7 (args -> LPAREN RPAREN .)
    MODIFIES        reduce using rule 7 (args -> LPAREN RPAREN .)
    ENSURES         reduce using rule 7 (args -> LPAREN RPAREN .)
    DECREASES       reduce using rule 7 (args -> LPAREN RPAREN .)
    LCB             reduce using rule 7 (args -> LPAREN RPAREN .)


state 18

    (8) args -> LPAREN vardecls . RPAREN
    (10) vardecls -> vardecls . COMMA vardecl

    RPAREN          shift and go to state 23
    COMMA           shift and go to state 24


state 19

    (9) vardecls -> vardecl .

    RPAREN          reduce using rule 9 (vardecls -> vardecl .)
    COMMA           reduce using rule 9 (vardecls -> vardecl .)


state 20

    (23) field -> METHOD symbol args returns requires . modifies ensures decreases LCB stmts RCB
    (15) modifies -> .
    (16) modifies -> . MODIFIES modsets opt_semi

    ENSURES         reduce using rule 15 (modifies -> .)
    DECREASES       reduce using rule 15 (modifies -> .)
    LCB             reduce using rule 15 (modifies -> .)
    MODIFIES        shift and go to state 26

    modifies                       shift and go to state 25

state 21

    (14) requires -> REQUIRES . expr opt_semi
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . symbol
    (34) expr -> . symbol LPAREN RPAREN
    (35) expr -> . symbol LPAREN exprs RPAREN
    (36) expr -> . expr AND expr
    (37) expr -> . expr OR expr
    (38) expr -> . expr IMPLIES expr
    (39) expr -> . expr IFF expr
    (40) expr -> . BANG expr
    (41) expr -> . expr EQEQ expr
    (42) expr -> . expr BANGEQ expr
    (43) expr -> . expr PLUS expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . MINUS expr
    (46) expr -> . expr TIMES expr
    (47) expr -> . expr LE expr
    (48) expr -> . expr LT expr
    (49) expr -> . expr GE expr
    (50) expr -> . expr GT expr
    (5) symbol -> . SYMBOL

    LPAREN          shift and go to state 28
    BANG            shift and go to state 30
    MINUS           shift and go to state 31
    SYMBOL          shift and go to state 8

    expr                           shift and go to state 27
    symbol                         shift and go to state 29

state 22

    (20) returns -> RETURNS args .

    REQUIRES        reduce using rule 20 (returns -> RETURNS args .)
    MODIFIES        reduce using rule 20 (returns -> RETURNS args .)
    ENSURES         reduce using rule 20 (returns -> RETURNS args .)
    DECREASES       reduce using rule 20 (returns -> RETURNS args .)
    LCB             reduce using rule 20 (returns -> RETURNS args .)


state 23

    (8) args -> LPAREN vardecls RPAREN .

    RETURNS         reduce using rule 8 (args -> LPAREN vardecls RPAREN .)
    REQUIRES        reduce using rule 8 (args -> LPAREN vardecls RPAREN .)
    MODIFIES        reduce using rule 8 (args -> LPAREN vardecls RPAREN .)
    ENSURES         reduce using rule 8 (args -> LPAREN vardecls RPAREN .)
    DECREASES       reduce using rule 8 (args -> LPAREN vardecls RPAREN .)
    LCB             reduce using rule 8 (args -> LPAREN vardecls RPAREN .)


state 24

    (10) vardecls -> vardecls COMMA . vardecl
    (4) vardecl -> . SYMBOL COLON type

    SYMBOL          shift and go to state 6

    vardecl                        shift and go to state 32

state 25

    (23) field -> METHOD symbol args returns requires modifies . ensures decreases LCB stmts RCB
    (17) ensures -> .
    (18) ensures -> . ENSURES expr opt_semi

    DECREASES       reduce using rule 17 (ensures -> .)
    LCB             reduce using rule 17 (ensures -> .)
    ENSURES         shift and go to state 34

    ensures                        shift and go to state 33

state 26

    (16) modifies -> MODIFIES . modsets opt_semi
    (24) modsets -> .
    (25) modsets -> . modset
    (26) modsets -> . modsets COMMA modset
    (27) modset -> . symbol
    (28) modset -> . LCB RCB
    (29) modset -> . LCB symbols RCB
    (5) symbol -> . SYMBOL

  ! shift/reduce conflict for LCB resolved as shift
    COMMA           reduce using rule 24 (modsets -> .)
    SEMI            reduce using rule 24 (modsets -> .)
    ENSURES         reduce using rule 24 (modsets -> .)
    DECREASES       reduce using rule 24 (modsets -> .)
    INVARIANT       reduce using rule 24 (modsets -> .)
    LCB             shift and go to state 38
    SYMBOL          shift and go to state 8

  ! LCB             [ reduce using rule 24 (modsets -> .) ]

    modsets                        shift and go to state 35
    modset                         shift and go to state 36
    symbol                         shift and go to state 37

state 27

    (14) requires -> REQUIRES expr . opt_semi
    (36) expr -> expr . AND expr
    (37) expr -> expr . OR expr
    (38) expr -> expr . IMPLIES expr
    (39) expr -> expr . IFF expr
    (41) expr -> expr . EQEQ expr
    (42) expr -> expr . BANGEQ expr
    (43) expr -> expr . PLUS expr
    (44) expr -> expr . MINUS expr
    (46) expr -> expr . TIMES expr
    (47) expr -> expr . LE expr
    (48) expr -> expr . LT expr
    (49) expr -> expr . GE expr
    (50) expr -> expr . GT expr
    (11) opt_semi -> .
    (12) opt_semi -> . SEMI

    AND             shift and go to state 40
    OR              shift and go to state 41
    IMPLIES         shift and go to state 42
    IFF             shift and go to state 43
    EQEQ            shift and go to state 44
    BANGEQ          shift and go to state 45
    PLUS            shift and go to state 46
    MINUS           shift and go to state 47
    TIMES           shift and go to state 48
    LE              shift and go to state 49
    LT              shift and go to state 50
    GE              shift and go to state 51
    GT              shift and go to state 52
    MODIFIES        reduce using rule 11 (opt_semi -> .)
    ENSURES         reduce using rule 11 (opt_semi -> .)
    DECREASES       reduce using rule 11 (opt_semi -> .)
    LCB             reduce using rule 11 (opt_semi -> .)
    SEMI            shift and go to state 53

    opt_semi                       shift and go to state 39

state 28

    (32) expr -> LPAREN . expr RPAREN
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . symbol
    (34) expr -> . symbol LPAREN RPAREN
    (35) expr -> . symbol LPAREN exprs RPAREN
    (36) expr -> . expr AND expr
    (37) expr -> . expr OR expr
    (38) expr -> . expr IMPLIES expr
    (39) expr -> . expr IFF expr
    (40) expr -> . BANG expr
    (41) expr -> . expr EQEQ expr
    (42) expr -> . expr BANGEQ expr
    (43) expr -> . expr PLUS expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . MINUS expr
    (46) expr -> . expr TIMES expr
    (47) expr -> . expr LE expr
    (48) expr -> . expr LT expr
    (49) expr -> . expr GE expr
    (50) expr -> . expr GT expr
    (5) symbol -> . SYMBOL

    LPAREN          shift and go to state 28
    BANG            shift and go to state 30
    MINUS           shift and go to state 31
    SYMBOL          shift and go to state 8

    expr                           shift and go to state 54
    symbol                         shift and go to state 29

state 29

    (33) expr -> symbol .
    (34) expr -> symbol . LPAREN RPAREN
    (35) expr -> symbol . LPAREN exprs RPAREN

    AND             reduce using rule 33 (expr -> symbol .)
    OR              reduce using rule 33 (expr -> symbol .)
    IMPLIES         reduce using rule 33 (expr -> symbol .)
    IFF             reduce using rule 33 (expr -> symbol .)
    EQEQ            reduce using rule 33 (expr -> symbol .)
    BANGEQ          reduce using rule 33 (expr -> symbol .)
    PLUS            reduce using rule 33 (expr -> symbol .)
    MINUS           reduce using rule 33 (expr -> symbol .)
    TIMES           reduce using rule 33 (expr -> symbol .)
    LE              reduce using rule 33 (expr -> symbol .)
    LT              reduce using rule 33 (expr -> symbol .)
    GE              reduce using rule 33 (expr -> symbol .)
    GT              reduce using rule 33 (expr -> symbol .)
    SEMI            reduce using rule 33 (expr -> symbol .)
    MODIFIES        reduce using rule 33 (expr -> symbol .)
    ENSURES         reduce using rule 33 (expr -> symbol .)
    DECREASES       reduce using rule 33 (expr -> symbol .)
    LCB             reduce using rule 33 (expr -> symbol .)
    RPAREN          reduce using rule 33 (expr -> symbol .)
    COMMA           reduce using rule 33 (expr -> symbol .)
    INVARIANT       reduce using rule 33 (expr -> symbol .)
    LPAREN          shift and go to state 55


state 30

    (40) expr -> BANG . expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . symbol
    (34) expr -> . symbol LPAREN RPAREN
    (35) expr -> . symbol LPAREN exprs RPAREN
    (36) expr -> . expr AND expr
    (37) expr -> . expr OR expr
    (38) expr -> . expr IMPLIES expr
    (39) expr -> . expr IFF expr
    (40) expr -> . BANG expr
    (41) expr -> . expr EQEQ expr
    (42) expr -> . expr BANGEQ expr
    (43) expr -> . expr PLUS expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . MINUS expr
    (46) expr -> . expr TIMES expr
    (47) expr -> . expr LE expr
    (48) expr -> . expr LT expr
    (49) expr -> . expr GE expr
    (50) expr -> . expr GT expr
    (5) symbol -> . SYMBOL

    LPAREN          shift and go to state 28
    BANG            shift and go to state 30
    MINUS           shift and go to state 31
    SYMBOL          shift and go to state 8

    expr                           shift and go to state 56
    symbol                         shift and go to state 29

state 31

    (45) expr -> MINUS . expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . symbol
    (34) expr -> . symbol LPAREN RPAREN
    (35) expr -> . symbol LPAREN exprs RPAREN
    (36) expr -> . expr AND expr
    (37) expr -> . expr OR expr
    (38) expr -> . expr IMPLIES expr
    (39) expr -> . expr IFF expr
    (40) expr -> . BANG expr
    (41) expr -> . expr EQEQ expr
    (42) expr -> . expr BANGEQ expr
    (43) expr -> . expr PLUS expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . MINUS expr
    (46) expr -> . expr TIMES expr
    (47) expr -> . expr LE expr
    (48) expr -> . expr LT expr
    (49) expr -> . expr GE expr
    (50) expr -> . expr GT expr
    (5) symbol -> . SYMBOL

    LPAREN          shift and go to state 28
    BANG            shift and go to state 30
    MINUS           shift and go to state 31
    SYMBOL          shift and go to state 8

    expr                           shift and go to state 57
    symbol                         shift and go to state 29

state 32

    (10) vardecls -> vardecls COMMA vardecl .

    RPAREN          reduce using rule 10 (vardecls -> vardecls COMMA vardecl .)
    COMMA           reduce using rule 10 (vardecls -> vardecls COMMA vardecl .)


state 33

    (23) field -> METHOD symbol args returns requires modifies ensures . decreases LCB stmts RCB
    (21) decreases -> .
    (22) decreases -> . DECREASES expr opt_semi

    LCB             reduce using rule 21 (decreases -> .)
    DECREASES       shift and go to state 59

    decreases                      shift and go to state 58

state 34

    (18) ensures -> ENSURES . expr opt_semi
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . symbol
    (34) expr -> . symbol LPAREN RPAREN
    (35) expr -> . symbol LPAREN exprs RPAREN
    (36) expr -> . expr AND expr
    (37) expr -> . expr OR expr
    (38) expr -> . expr IMPLIES expr
    (39) expr -> . expr IFF expr
    (40) expr -> . BANG expr
    (41) expr -> . expr EQEQ expr
    (42) expr -> . expr BANGEQ expr
    (43) expr -> . expr PLUS expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . MINUS expr
    (46) expr -> . expr TIMES expr
    (47) expr -> . expr LE expr
    (48) expr -> . expr LT expr
    (49) expr -> . expr GE expr
    (50) expr -> . expr GT expr
    (5) symbol -> . SYMBOL

    LPAREN          shift and go to state 28
    BANG            shift and go to state 30
    MINUS           shift and go to state 31
    SYMBOL          shift and go to state 8

    expr                           shift and go to state 60
    symbol                         shift and go to state 29

state 35

    (16) modifies -> MODIFIES modsets . opt_semi
    (26) modsets -> modsets . COMMA modset
    (11) opt_semi -> .
    (12) opt_semi -> . SEMI

    COMMA           shift and go to state 62
    ENSURES         reduce using rule 11 (opt_semi -> .)
    DECREASES       reduce using rule 11 (opt_semi -> .)
    LCB             reduce using rule 11 (opt_semi -> .)
    INVARIANT       reduce using rule 11 (opt_semi -> .)
    SEMI            shift and go to state 53

    opt_semi                       shift and go to state 61

state 36

    (25) modsets -> modset .

    COMMA           reduce using rule 25 (modsets -> modset .)
    SEMI            reduce using rule 25 (modsets -> modset .)
    ENSURES         reduce using rule 25 (modsets -> modset .)
    DECREASES       reduce using rule 25 (modsets -> modset .)
    LCB             reduce using rule 25 (modsets -> modset .)
    INVARIANT       reduce using rule 25 (modsets -> modset .)


state 37

    (27) modset -> symbol .

    COMMA           reduce using rule 27 (modset -> symbol .)
    SEMI            reduce using rule 27 (modset -> symbol .)
    ENSURES         reduce using rule 27 (modset -> symbol .)
    DECREASES       reduce using rule 27 (modset -> symbol .)
    LCB             reduce using rule 27 (modset -> symbol .)
    INVARIANT       reduce using rule 27 (modset -> symbol .)


state 38

    (28) modset -> LCB . RCB
    (29) modset -> LCB . symbols RCB
    (30) symbols -> . symbol
    (31) symbols -> . symbols COMMA symbol
    (5) symbol -> . SYMBOL

    RCB             shift and go to state 63
    SYMBOL          shift and go to state 8

    symbols                        shift and go to state 64
    symbol                         shift and go to state 65

state 39

    (14) requires -> REQUIRES expr opt_semi .

    MODIFIES        reduce using rule 14 (requires -> REQUIRES expr opt_semi .)
    ENSURES         reduce using rule 14 (requires -> REQUIRES expr opt_semi .)
    DECREASES       reduce using rule 14 (requires -> REQUIRES expr opt_semi .)
    LCB             reduce using rule 14 (requires -> REQUIRES expr opt_semi .)


state 40

    (36) expr -> expr AND . expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . symbol
    (34) expr -> . symbol LPAREN RPAREN
    (35) expr -> . symbol LPAREN exprs RPAREN
    (36) expr -> . expr AND expr
    (37) expr -> . expr OR expr
    (38) expr -> . expr IMPLIES expr
    (39) expr -> . expr IFF expr
    (40) expr -> . BANG expr
    (41) expr -> . expr EQEQ expr
    (42) expr -> . expr BANGEQ expr
    (43) expr -> . expr PLUS expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . MINUS expr
    (46) expr -> . expr TIMES expr
    (47) expr -> . expr LE expr
    (48) expr -> . expr LT expr
    (49) expr -> . expr GE expr
    (50) expr -> . expr GT expr
    (5) symbol -> . SYMBOL

    LPAREN          shift and go to state 28
    BANG            shift and go to state 30
    MINUS           shift and go to state 31
    SYMBOL          shift and go to state 8

    expr                           shift and go to state 66
    symbol                         shift and go to state 29

state 41

    (37) expr -> expr OR . expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . symbol
    (34) expr -> . symbol LPAREN RPAREN
    (35) expr -> . symbol LPAREN exprs RPAREN
    (36) expr -> . expr AND expr
    (37) expr -> . expr OR expr
    (38) expr -> . expr IMPLIES expr
    (39) expr -> . expr IFF expr
    (40) expr -> . BANG expr
    (41) expr -> . expr EQEQ expr
    (42) expr -> . expr BANGEQ expr
    (43) expr -> . expr PLUS expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . MINUS expr
    (46) expr -> . expr TIMES expr
    (47) expr -> . expr LE expr
    (48) expr -> . expr LT expr
    (49) expr -> . expr GE expr
    (50) expr -> . expr GT expr
    (5) symbol -> . SYMBOL

    LPAREN          shift and go to state 28
    BANG            shift and go to state 30
    MINUS           shift and go to state 31
    SYMBOL          shift and go to state 8

    expr                           shift and go to state 67
    symbol                         shift and go to state 29

state 42

    (38) expr -> expr IMPLIES . expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . symbol
    (34) expr -> . symbol LPAREN RPAREN
    (35) expr -> . symbol LPAREN exprs RPAREN
    (36) expr -> . expr AND expr
    (37) expr -> . expr OR expr
    (38) expr -> . expr IMPLIES expr
    (39) expr -> . expr IFF expr
    (40) expr -> . BANG expr
    (41) expr -> . expr EQEQ expr
    (42) expr -> . expr BANGEQ expr
    (43) expr -> . expr PLUS expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . MINUS expr
    (46) expr -> . expr TIMES expr
    (47) expr -> . expr LE expr
    (48) expr -> . expr LT expr
    (49) expr -> . expr GE expr
    (50) expr -> . expr GT expr
    (5) symbol -> . SYMBOL

    LPAREN          shift and go to state 28
    BANG            shift and go to state 30
    MINUS           shift and go to state 31
    SYMBOL          shift and go to state 8

    expr                           shift and go to state 68
    symbol                         shift and go to state 29

state 43

    (39) expr -> expr IFF . expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . symbol
    (34) expr -> . symbol LPAREN RPAREN
    (35) expr -> . symbol LPAREN exprs RPAREN
    (36) expr -> . expr AND expr
    (37) expr -> . expr OR expr
    (38) expr -> . expr IMPLIES expr
    (39) expr -> . expr IFF expr
    (40) expr -> . BANG expr
    (41) expr -> . expr EQEQ expr
    (42) expr -> . expr BANGEQ expr
    (43) expr -> . expr PLUS expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . MINUS expr
    (46) expr -> . expr TIMES expr
    (47) expr -> . expr LE expr
    (48) expr -> . expr LT expr
    (49) expr -> . expr GE expr
    (50) expr -> . expr GT expr
    (5) symbol -> . SYMBOL

    LPAREN          shift and go to state 28
    BANG            shift and go to state 30
    MINUS           shift and go to state 31
    SYMBOL          shift and go to state 8

    expr                           shift and go to state 69
    symbol                         shift and go to state 29

state 44

    (41) expr -> expr EQEQ . expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . symbol
    (34) expr -> . symbol LPAREN RPAREN
    (35) expr -> . symbol LPAREN exprs RPAREN
    (36) expr -> . expr AND expr
    (37) expr -> . expr OR expr
    (38) expr -> . expr IMPLIES expr
    (39) expr -> . expr IFF expr
    (40) expr -> . BANG expr
    (41) expr -> . expr EQEQ expr
    (42) expr -> . expr BANGEQ expr
    (43) expr -> . expr PLUS expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . MINUS expr
    (46) expr -> . expr TIMES expr
    (47) expr -> . expr LE expr
    (48) expr -> . expr LT expr
    (49) expr -> . expr GE expr
    (50) expr -> . expr GT expr
    (5) symbol -> . SYMBOL

    LPAREN          shift and go to state 28
    BANG            shift and go to state 30
    MINUS           shift and go to state 31
    SYMBOL          shift and go to state 8

    expr                           shift and go to state 70
    symbol                         shift and go to state 29

state 45

    (42) expr -> expr BANGEQ . expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . symbol
    (34) expr -> . symbol LPAREN RPAREN
    (35) expr -> . symbol LPAREN exprs RPAREN
    (36) expr -> . expr AND expr
    (37) expr -> . expr OR expr
    (38) expr -> . expr IMPLIES expr
    (39) expr -> . expr IFF expr
    (40) expr -> . BANG expr
    (41) expr -> . expr EQEQ expr
    (42) expr -> . expr BANGEQ expr
    (43) expr -> . expr PLUS expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . MINUS expr
    (46) expr -> . expr TIMES expr
    (47) expr -> . expr LE expr
    (48) expr -> . expr LT expr
    (49) expr -> . expr GE expr
    (50) expr -> . expr GT expr
    (5) symbol -> . SYMBOL

    LPAREN          shift and go to state 28
    BANG            shift and go to state 30
    MINUS           shift and go to state 31
    SYMBOL          shift and go to state 8

    expr                           shift and go to state 71
    symbol                         shift and go to state 29

state 46

    (43) expr -> expr PLUS . expr
    (32) expr -> . LPAREN expr RPAREN
    (33) expr -> . symbol
    (34) expr -> . symbol LPAREN RPAREN
    (35) expr -> . symbol LPAREN exprs RPAREN
    (36) expr -> . expr AND expr
    (37) expr -> . expr OR expr
    (38) expr -> . expr IMPLIES expr
    (39) expr -> . expr IFF expr
    (40) expr -> . BANG expr
    (41) expr -> . expr EQEQ expr
    (42) expr -> . expr BANGEQ expr
    (43) expr -> . expr PLUS expr
    (44) expr -> . expr MINUS expr
    (45) expr -> . MINUS expr
    (46) expr -> . expr TIMES expr
    (47) expr -> . expr LE expr
    (48) expr -> . expr LT expr
    (49) expr -> . expr GE expr
    (50) expr -> . expr GT expr
    (5) symbol -> . SYMBOL

    LPAREN          shift and go to state 28
    BANG            shift and go to state 30
    MINUS           shift and go to state 31
    SYMBOL          shift and go to state 8

    expr                           shift and go to state 72
    symbol                         shift and go to state 29

state 47
